feat: add Docker Compose, Nginx, CI/CD, SonarCloud, Bruno E2E testing
- Docker Compose: dev (with healthchecks, networks, memory limits),
  prod (pre-built images, SSL), CI (Bruno test container)
- Nginx reverse proxy: HTTPS dev config (mkcert), prod config (SSL)
- GitHub Actions CI: backend tests, frontend checks, Bruno E2E,
  SonarCloud analysis, PR gate workflow
- Bruno API testing: 7 E2E tests (login, auth, issues, users, comments)
- JaCoCo coverage reporting for SonarCloud integration
- Health endpoint (GET /api/auth/health) for Docker healthchecks
- Configurable CORS origins via environment variable
- Enhanced Makefile with 18 targets (dev, build, test, https, prod, etc.)
- Env examples for dev and production
- Root .gitignore